// Vitest Snapshot v1

exports[`Table > renders selected rows 1`] = `
<table
  class="sc-cidDSM btgGwg"
>
  <thead
    class="sc-jcFjpl sJFYt"
  >
    <tr
      class="sc-efQSVx hxiekL"
    >
      <th
        class="sc-iUKqMP dBCEfj"
      >
        <span
          style="display: flex; align-items: flex-start;"
        >
          Header A
        </span>
      </th>
      <th
        class="sc-iUKqMP dBCEfj"
      >
        <span
          style="display: flex; align-items: flex-start;"
        >
          Header B
        </span>
      </th>
      <th
        class="sc-iUKqMP dBCEfj"
      >
        <span
          style="display: flex; align-items: flex-start;"
        >
          Header C
        </span>
      </th>
    </tr>
  </thead>
  <tbody
    class="sc-caiLqq iaIheK"
  >
    <tr
      class="sc-efQSVx hxiekL"
    >
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content A1
      </td>
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content B1
      </td>
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content C1
      </td>
    </tr>
    <tr
      class="sc-efQSVx ioOCmN"
    >
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content A2
      </td>
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content B2
      </td>
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content C2
      </td>
    </tr>
    <tr
      class="sc-efQSVx hxiekL"
    >
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content A3
      </td>
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content B3
      </td>
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content C3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table > renders with some content 1`] = `
<table
  class="sc-cidDSM btgGwg"
>
  <thead
    class="sc-jcFjpl sJFYt"
  >
    <tr
      class="sc-efQSVx hxiekL"
    >
      <th
        class="sc-iUKqMP dBCEfj"
      >
        <span
          style="display: flex; align-items: flex-start;"
        >
          Header A
        </span>
      </th>
      <th
        class="sc-iUKqMP dBCEfj"
      >
        <span
          style="display: flex; align-items: flex-start;"
        >
          Header A
          <svg
            fill="none"
            height="16"
            style="vertical-align: middle;"
            viewBox="0 0 11 16"
            width="11"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.375 5L5.375 1L9.375 5M9.375"
              stroke="#9CA3AF"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.67"
            />
            <path
              d="M1.375 5M9.375 11L5.375 15L1.375 11"
              stroke="#9CA3AF"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.67"
            />
          </svg>
        </span>
      </th>
      <th
        class="sc-iUKqMP dBCEfj"
      >
        <span
          style="display: flex; align-items: flex-start;"
        >
          Header B
          <svg
            fill="none"
            height="7"
            style="margin-top: 6px;"
            viewBox="0 0 12 7"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 6L6 1L1 6"
              stroke="#6B7280"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.67"
            />
          </svg>
        </span>
      </th>
      <th
        class="sc-iUKqMP dBCEfj"
      >
        <span
          style="display: flex; align-items: flex-start;"
        >
          Header C
          <svg
            fill="none"
            height="7"
            style="margin-top: 6px;"
            viewBox="0 0 12 7"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 1L6 6L1 1"
              stroke="#6B7280"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.67"
            />
          </svg>
        </span>
      </th>
      <td
        class="sc-iAKWXU cDDlQQ"
      />
    </tr>
  </thead>
  <tbody
    class="sc-caiLqq iaIheK"
  >
    <tr
      class="sc-efQSVx hxiekL"
    >
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content A1
      </td>
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content B1
      </td>
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content C1
      </td>
      <td
        class="sc-iAKWXU cDDlQQ"
      />
    </tr>
    <tr
      class="sc-efQSVx eWqWEW"
    >
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content A1
      </td>
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content B1
      </td>
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        Content C1
      </td>
      <td
        class="sc-iAKWXU cDDlQQ"
      >
        <span
          class="sc-cTAqQK dVxJlT"
        >
          New
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;
